@@ -1,2 +1,3 @@
+*.swp
 Makefile
 Makefile.in
