@@ -4,3 +4,4 @@ Makefile.in
 .libs
 gparted
 *.o
+*.swp
