@@ -1,3 +1,11 @@
+2005-11-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	* include/.cvsignore,
+	  src/.cvsignore: added *.swp
+	* Makefile.am,
+	  include/Dialog_Filesystems.h: some modifications to pass 'make
+	  distcheck'
+	* src/GParted_Core.cc: minor cleanups
+	
 2005-11-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	* include/FileSystem.h: cleanups
 	* include/GParted_Core.h,
